--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
             opam switch 4.07 && eval $(opam env)
             opam install -y dune
             dune external-lib-deps cli/main.exe | grep -E '^-' | cut -c 3- | tr '\n' ' ' > ./_deps
+            cat ./_deps
       - restore_cache:
           key: deps-cache-{{ checksum "_deps" }}
       - run:
